# one_demension_optimization

./: README.md
src/laba_1/: pyproject.toml
src/laba_1/lib/: funcs.py  models.py
src/laba_1/lib/app/: app.py  settings.py
src/laba_1/lib/methods/: __init__.py  fibanacci.py  golden_section.py
src/laba_2/: pyproject.toml
src/laba_2/lib/: funcs.py  models.py
src/laba_2/lib/app/: app.py  settings.py
src/laba_2/lib/methods/: __init__.py  euclodean_norm.py  gauss_seidel.py  golden_search.py
src/lib/: models.py
src/lib/app/: app.py  graphic.py
src/lib/methods/: dichotomy.py  fibanacci.py  golden_section.py
