[tool.poetry]
name = "one-dimension-optimization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
prettytable = "^3.10.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pyright = "^1.1.357"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
